--- a/FilmsFrontend/package.json
+++ b/FilmsFrontend/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
